--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.30.0
-pandas==2.2.2
-openai
-scikit-learn==1.4.2
+streamlit
+pandas
+sentence-transformers
+scikit-learn
+requests
+pillow
